--- a/product/pom.xml
+++ b/product/pom.xml
@@ -182,6 +182,11 @@
             <artifactId>org.wso2.carbon.identity.inbound.provisioning.scim2.provider.feature</artifactId>
             <type>zip</type>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.wso2.carbon.identity.governance</groupId>-->
+            <!--<artifactId>org.wso2.carbon.identity.recovery.server.feature</artifactId>-->
+            <!--<type>zip</type>-->
+        <!--</dependency>-->
 
         <!-- Sample Simple Authentication Component -->
 
@@ -407,6 +412,10 @@
                                     <id>org.wso2.carbon.security.store.connector.jdbc.feature</id>
                                     <version>${carbon.security.userstore.jdbc.version}</version>
                                 </feature>
+                                <!--<feature>-->
+                                    <!--<id>org.wso2.carbon.identity.recovery.server.feature</id>-->
+                                    <!--<version>${org.wso2.carbon.identity.recovery.server.feature.version}</version>-->
+                                <!--</feature>-->
 
                                 <!-- Sample Applications -->
                                 <!--<feature>-->
@@ -569,6 +578,10 @@
                                     <id>org.wso2.carbon.security.store.connector.jdbc.feature</id>
                                     <version>${carbon.security.userstore.jdbc.version}</version>
                                 </feature>
+                                <!--<feature>-->
+                                    <!--<id>org.wso2.carbon.identity.recovery.server.feature</id>-->
+                                    <!--<version>${org.wso2.carbon.identity.recovery.server.feature.version}</version>-->
+                                <!--</feature>-->
                                 <!--<feature>-->
                                     <!--<id>org.wso2.carbon.uuf.Features-app.feature.group</id>-->
                                     <!--<version>${carbon.uuf.version}</version>-->
