--- a/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
+++ b/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>org.wso2.carbon.uuf.core</artifactId>
             <version>1.0.0-m7</version>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.governance</groupId>
+            <artifactId>org.wso2.carbon.identity.recovery</artifactId>
+        </dependency>
 
         <!--<dependency>-->
             <!--<groupId>org.apache.felix</groupId>-->
