removing the federated login icons

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
@@ -25,7 +25,7 @@ bindings:
        - "org.wso2.carbon.iam.user-portal.feature.usermenu"
 
 config:
-  appName: "IAM User Portal"
+  appName: "IS User Portal"
   pageSize: 10
   loginRedirectUri: "/"
   loginPageUri: "/login"
