Removing DataHolder from the component.

--- a/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
+++ b/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
@@ -70,8 +70,8 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.apache.felix</groupId>-->
-            <!--<artifactId>org.apache.felix.scr.ds-annotations</artifactId>-->
+        <!--<groupId>org.apache.felix</groupId>-->
+        <!--<artifactId>org.apache.felix.scr.ds-annotations</artifactId>-->
         <!--</dependency>-->
     </dependencies>
 
@@ -93,6 +93,9 @@
             !org.wso2.is.portal.user.client.api.internal.*,
             org.wso2.is.portal.user.client.api.*;version="${project.version}"
         </export.package>
+        <bundle.activator>
+            org.wso2.is.portal.user.client.api.internal.Activator
+        </bundle.activator>
 
         <checkstyle.skip>true</checkstyle.skip>
     </properties>
