--- a/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
+++ b/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
@@ -52,12 +52,14 @@
             <artifactId>org.osgi.core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.ops4j.pax.logging</groupId>
+            <artifactId>pax-logging-api</artifactId>
+            <version>${pax.logging.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <groupId>org.ops4j.pax.logging</groupId>
+            <artifactId>pax-logging-log4j2</artifactId>
+            <version>${pax.logging.log4j2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity.mgt</groupId>
