--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -86,3 +86,41 @@ profiles:
    readonly: false
    dataType: "email"
    regex: ".*"
+ -
+  profileName: "self-signUp"
+  isAdminProfile: true
+  claims:
+  -
+   claimURI: "http://wso2.org/claims/username"
+   displayName: "User Name"
+   required: true
+   readonly: true
+   verifier: "claim verifying extension"
+   validator: "claim validating extension"
+   transformer: "transform extension"
+   regex: "*"
+   dataType: "text"
+   properties:
+    customproperty: "custom value"
+  -
+   claimURI: "http://wso2.org/claims/givenname"
+   displayName: "First Name"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "text"
+  -
+   claimURI: "http://wso2.org/claims/lastname"
+   displayName: "Last Name"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "text"
+  -
+   claimURI: "http://wso2.org/claims/email"
+   displayName: "Email"
+   required: true
+   readonly: false
+   dataType: "email"
+   regex: "*"
+   defaultValue: "user1@example.com"
